fix: center aligning contact info in footer

--- a/src/components/layout/footer/info/contact.module.css
+++ b/src/components/layout/footer/info/contact.module.css
@@ -34,6 +34,7 @@
 @media only screen and (max-width: 933px) {
   .container {
     text-align: center;
+    float: none;
   }
 
   .text {
